--- a/frontend/3. css/src/style/style.css
+++ b/frontend/3. css/src/style/style.css
@@ -61,7 +61,7 @@ header button, .first button{
 }
 
 .title-conte h1{
-  font-size: 1.5rem;
+  font-size: 4rem;
   font-weight: bolder;
 }
 
@@ -141,7 +141,7 @@ header button, .first button{
   box-shadow: 0px 0px 7px 1px rgba(219, 219, 219, 0.49);
 }
 
-.why h1, .preparation h1{
+.why h1, .preparation h1, .emergencyContact h1{
   color: #1f3e72;
   font-weight: bolder;
   margin-bottom: 30px;
@@ -202,13 +202,12 @@ header button, .first button{
   height: 600px;
 }
 
-
 .contact i{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   border-radius: 8px;
   font-size: 1.3rem;
   color: #3454d2;
@@ -220,7 +219,20 @@ header button, .first button{
   padding: 30px;
   box-shadow: 0px 2px 10px -1px rgba(209,209,209,0.49);
 }
+
 .foots{
   background-color: #eef3ff;
+}
+
+.foots h5{
+  color: #1f3e72;
+  font-weight: bolder;
+}
+
+.triangle-container-footer {
+  position: absolute;
+  z-index: 0;
+  width: 200px;
+  
 }
 /* */
